bynkc/tests/fixtures/negative/90_duplicate_mock_target/src/commerce/payment.bynk
context commerce.payment {
  capability Logger {
    fn log(msg: String) -> Effect[()]
  }

  provides Logger = NoOpLogger {
    fn log(msg: String) -> Effect[()] {
      Effect.pure(())
    }
  }

  service ping {
    on call() -> Effect[Bool] given Logger {
      let _ <- Logger.log("ping")
      Effect.pure(true)
    }
  }
}
